--- a/Site/Dev/public/index.html
+++ b/Site/Dev/public/index.html
@@ -13,6 +13,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-analytics-compat.js"></script>
     <script src="https://js.stripe.com/v3/"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <style>
       @media (orientation: landscape) {
         /* body {
@@ -214,7 +215,6 @@
     <script src="./js/auth.js"></script>
     <script src="./js/main.js"></script>
     <script>
-
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingTutorial = document.querySelector("#unity-tutorial");
