country and ip address

--- a/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
+++ b/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
@@ -13,6 +13,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-analytics-compat.js"></script>
     <script src="https://js.stripe.com/v3/"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <style>
       @media (orientation: landscape) {
         /* body {
