--- a/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
+++ b/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="TemplateData/favicon.ico">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="TemplateData/favicon.ico"
+    />
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Qoomon Quest</title>
@@ -14,6 +18,30 @@
     <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-analytics-compat.js"></script>
     <script src="https://js.stripe.com/v3/"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://www.str67gj.com/scripts/sdk/everflow.js"
+    ></script>
+    <script type="text/javascript">
+      EF.click({
+        offer_id: EF.urlParameter("oid"),
+        affiliate_id: EF.urlParameter("affid"),
+        sub1: "creative_name",
+        sub2: "device_type",
+        sub3: "geo_country_code",
+        sub4: "source_id",
+        sub5: EF.urlParameter("sub5"),
+        uid: EF.urlParameter("uid"),
+        source_id: EF.urlParameter("source_id"),
+        transaction_id: EF.urlParameter("_ef_transaction_id"),
+      });
+
+      function triggerConversionScript() {
+        EF.conversion({
+          offer_id: 13,
+        });
+      }
+    </script>
     <style>
       @media (orientation: landscape) {
         /* body {
@@ -50,7 +78,7 @@
       #unity-tutorial img.active {
         display: block;
       }
-      #loadingContainer{
+      #loadingContainer {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -214,7 +242,6 @@
     <script src="./js/auth.js"></script>
     <script src="./js/main.js"></script>
     <script>
-
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingTutorial = document.querySelector("#unity-tutorial");
