--- a/Site/Dev/public/index.html
+++ b/Site/Dev/public/index.html
@@ -141,7 +141,7 @@
           <img
             src="./TemplateData/loadingText.png"
             alt="tutorial card 5"
-            style="display: block; width: 100%; margin-top: 10px"
+            style="display: block; width: 100%; margin-top: 10px;"
           />
         </div>
       </div>
