--- a/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
+++ b/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
@@ -38,7 +38,7 @@
 
       function triggerConversionScript() {
         EF.conversion({
-          offer_id: 13,
+          offer_id: EF.urlParameter('oid'),
         });
       }
     </script>
