Changed agency code on JS side

--- a/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
+++ b/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
@@ -26,10 +26,10 @@
       EF.click({
         offer_id: EF.urlParameter("oid"),
         affiliate_id: EF.urlParameter("affid"),
-        sub1: "creative_name",
-        sub2: "device_type",
-        sub3: "geo_country_code",
-        sub4: "source_id",
+        sub1: EF.urlParameter("sub1"),
+        sub2: EF.urlParameter("sub2"),
+        sub3: EF.urlParameter("sub3"),
+        sub4: EF.urlParameter("sub4"),
         sub5: EF.urlParameter("sub5"),
         uid: EF.urlParameter("uid"),
         source_id: EF.urlParameter("source_id"),
