--- a/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
+++ b/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
@@ -255,6 +255,7 @@
     <script src="./js/firebaseConfig.js"></script>
     <script src="./js/auth.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/socket.js"></script>
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
