--- a/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
+++ b/Assets/_MyProject/Resources/WebTemplate/indexTemplate.html
@@ -18,6 +18,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-analytics-compat.js"></script>
     <script src="https://js.stripe.com/v3/"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
     <script
       type="text/javascript"
       src="https://www.str67gj.com/scripts/sdk/everflow.js"
